# Stellarium

./: README.md
.github/workflows/: build.yml  ci.yml  lol.yml  windows-build.yml
data/: ssystem_major.ini
plugins/: CMakeLists.txt
plugins/ObliquityControl/: CMakeLists.txt  module.ini
plugins/ObliquityControl/src/: ObliquityControlModule.cpp  ObliquityControlModule.hpp
src/core/modules/: Planet.cpp  Planet.hpp
src/gui/: locationDialogGui.ui
